--- a/Proyecto/app/src/main/res/drawable/layout_bg.xml
+++ b/Proyecto/app/src/main/res/drawable/layout_bg.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-  <solid android:color="@color/blueMain"/> <!-- Color de fondo del LinearLayout -->
+  <solid android:color="@color/selectedSidebarTextColor"/> <!-- Color de fondo del LinearLayout -->
   <corners android:radius="18dp"/> <!-- Valor de curvatura en dp -->
 </shape>
