--- a/Proyecto/app/src/main/res/layout/item_row.xml
+++ b/Proyecto/app/src/main/res/layout/item_row.xml
@@ -48,7 +48,7 @@
                     android:layout_height="match_parent"
                     android:fontFamily="@font/poppins_bold"
                     android:gravity="bottom"
-                    android:padding="7dp"
+                    android:paddingTop="10dp"
                     android:text="TextView"
                     android:textAlignment="textStart"
                     android:textColor="#fff"
@@ -58,14 +58,13 @@
 
             <TextView
                 android:id="@+id/txtCostoPlatillo"
-                android:layout_width="wrap_content"
+                android:layout_width="98dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_bold"
                 android:gravity="top"
-                android:padding="7dp"
                 android:text="TextView"
                 android:textAlignment="textStart"
-                android:textColor="#fff"
+                android:textColor="@color/orangeMain"
                 android:textSize="20sp" />
 
         </LinearLayout>
@@ -74,7 +73,6 @@
             android:layout_width="2dp"
             android:layout_height="71dp"
             android:layout_weight="1"
-            android:background="@drawable/layout_bg"
             android:gravity="center|right"
             android:orientation="vertical">
 
